style/app.scss
/* ... */
#course-video-div {
  height: 100%;
  margin: 5pt 0;
  width: 100%;
}

#course-video {
  height: 100%;
  width: 100%;
}

#post-image {
  border: solid 3px #000;
  border-radius: 5px;
  margin: 0 auto 10px;
  max-width: 100%;
}

#modal-buttons {
  float: right;
  margin: 20px auto;
}

#modal-buttons .btn {
  margin: 0 5px;
}

#react-graph {
  display: inline-block;
  height: 100%;
  margin: 0;
  overflow: hidden;
  position: absolute;
  text-align: center;
  width: 100%;
}

#react-graphRootSVG {
  height: 100%;
  shape-rendering: geometricprecision;
  stroke: #000;
  stroke-linecap: square;
  stroke-miterlimit: 10;
  width: 100%;
}

.panning {
  cursor: grab;
}

.highlight-nodes {
  background-color: #808080;
}

.graph-control-button {
  background-color: #fff;
  border: 0;
  border-radius: 6px;
  color: #5c497e;
  cursor: pointer;
  display: inline-block;
  font-size: 18px;
  font-weight: bold;
  height: 30px;
  line-height: 20px;
  outline: none;
  padding: 5px;
  position: relative;
  text-align: center;
  width: 30px;
}

.graph-control-button:hover {
  background-color: #cac4d4;
  color: #fff;
}

.graph-control-button:active {
  background-color: #5c497e;
  color: #fff;
}

.graph-control-button:disabled {
  background-color: #dedede;
  color: #9c9c9c;
}

.graph-control-button img {
  height: 100%;
  width: 100%;
}

#reset-view-button {
  align-items: center;
  box-shadow: 1px 0 5px 0 #808080;
  display: flex;
  justify-content: center;
  padding: 4px;
}

#container {
  background: #f0f5f8;
  height: 100%;
  position: relative;
  width: 100%;
}

.sidebar {
  background-color: #fff;
  border: solid #d3d4d6;
  border-radius: 10px;
  border-width: 0 1px;
  box-shadow: 4px 4px 4px #808080;
  display: flex;
  flex-direction: column;
  position: absolute;
  right: $graph-overlay-side-margin;
  top: $graph-overlay-top-margin + 120px;
  width: 160px;
  z-index: 1;
}

.sidebar-dropdown {
  padding: 10px;
}

.expanded > .sidebar-button > #sidebar-icon {
  transform: rotate(180deg);
}

div.sidebar.collapsed {
  height: 40px;
}

.collapsed > .sidebar-dropdown {
  display: none;
}

.sidebar-button {
  background-color: #5c497e;
  border-radius: 10px;
  cursor: pointer;
  display: flex;
  height: 15px;
  justify-content: center;
  margin-left: 70px;
  margin-top: -5px;
  width: 30px;
}

.selected-courses {
  color: #946aa8;
  font-size: 14px;
  margin-bottom: 10px;
  margin-top: 10px;
}

.courses {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  max-height: 275px;
  max-width: 140px;
  overflow: auto;
}

.course-selection,
.course-selection:hover {
  cursor: pointer;
  font-weight: normal;
  text-decoration: underline;
  text-decoration-color: #4c004c;
}

.sidebar-button:hover {
  background-color: #675d79;
}

#sidebar-icon {
  height: 15px;
  width: 15px;
}

.fcecount {
  font-size: 16px;
  line-height: 40px;
  text-align: center;
}

.reset-selections {
  background-color: #f5f5f5;
  border: 0;
  border-radius: 15px;
  box-shadow: 3px 3px 3px #dadbdd;
  color: #946aa8;
  font-size: 12px;
  margin: 10px;
  outline: none;
  padding: 5px 10px;
  text-align: center;
}

.reset-selections:hover {
  background-color: #cfccd4;
}

.label-hidden {
  display: none;
}

.search-bar {
  margin: 0 auto;
  width: 100%;
}

.search-dropdown {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  list-style: none;
  margin-bottom: 0;
  max-height: 100px;
  max-width: 145px;
  overflow: auto;
  padding-left: 0;
  text-align: center;
}

.dropdown-item {
  font-size: 14px;
  width: 100%;
  margin-bottom: 3px;
}

.dropdown-item:hover {
  cursor: pointer;
}

.spotlight {
  fill: #feefc8;
  stroke: #ffbd8e;
}

.spotlight-focus {
  fill: #fff;
  stroke: none;
}

.active {
  background-color: #7a6a96;
}

.disabled {
  background-color: #dedede;
  pointer-events: none;
}

.graph-dropdown-item {
  cursor: pointer;
}

.graph-dropdown-item:hover {
  background-color: #dedede;
  color: #000;
}

.focus-menu-bar {
  align-items: flex-end;
  bottom: 0;
  display: flex;
  justify-content: center;
  margin-left: 25px;
  margin-right: 25px;
  position: fixed;
  width: calc(100% - 50px);
}

.focus-menu-toggle {
  background-color: #a273d3;
  border: 0;
  border-radius: 17px 17px 0 0;
  color: #fff;
  font-size: 20px;
  left: 25px;
  padding: 7px 15px 0;
  position: fixed;
  width: 150px;
}

.focus {
  align-items: center;
  background-color: #a172d2;
  border-top-left-radius: 17px;
  border-top-right-radius: 30px 53px;
  box-shadow: 0 12px 20px 6px rgb(0 0 0 / 50%);
  display: flex;
  float: right;
  height: 45px;
  justify-content: center;
  margin: 5px -7px 0;
  padding: 3px 7px 0;
  position: relative;
  width: 130px;
}

.focus button {
  background-color: transparent;
  border: 0;
  color: #fff;
  font-size: 13px;
  width: 114px;
}

.focus::after,
.active-focus::before,
.focus:hover::before {
  background-color: transparent;
  border-radius: 50%;
  border-style: solid;
  border-width: 13px;
  content: "";
  height: 70px;
  position: absolute;
  top: -5px;
  width: 40px;
}

.focus::after {
  border-color: transparent transparent transparent #a172d2;
  right: -32px;
  transform: rotate(315deg);
}

.active-focus,
.focus:hover {
  background-color: #bf7ce6;
  border-top-left-radius: 30px 53px;
  width: 153px;
  z-index: 1;
}

.active-focus::before,
.focus:hover::before {
  border-color: transparent #bf7ce6 transparent transparent;
  right: 145px;
  transform: rotate(-315deg);
}

.active-focus::after,
.focus:hover::after {
  border-color: transparent transparent transparent #bf7ce6;
}

.focus-info button {
  background-color: #fff;
  border: 0;
  border-radius: 100%;
  box-shadow: 1px 2px 6px 1px rgb(0 0 0 / 35%);
  color: #a273d3;
  font-family: serif;
  font-size: 19px;
  font-style: italic;
  font-weight: bold;
  height: 25px;
  margin-right: 3px;
  position: relative;
  width: 25px;
  z-index: 1;
}

.button-container {
  display: flex;
  margin-left: auto;
}
/* ... */

